--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sten-sax-påse</title>
 </head>
+<script src="script.js"> </script>
 <body>
-    <h1>hej hej</h1>
+    <h1>hej</h1>
     
 </body>
 </html>
